11/1/2023
Added Functionalities and Animations.

Added business logic for accepting input values -> fetched by ChiTest
class for logic application.

Added moving image in first landing page, replace static image.

Added animator class to handle animations.